--- a/views/msg.erb
+++ b/views/msg.erb
@@ -6,26 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="ico/favicon.png">
 
-    <title>Static Top Navbar Example for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
+    <title>First singing with Sinatra</title>
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="navbar-static-top.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
 
-    <!-- Static navbar -->
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
@@ -44,17 +32,17 @@
             <li class="active"><a href="/msg">Message</a></li>
             
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
 
     <div class="container">
 
-      <!-- Main component for a primary marketing message or call to action -->
+    
       <div class="jumbotron">
-
-                      <div class="row">
+                <p>Before sending a message, you need to write your mail settings to a file main.rb</p>
+              <div class="row">
                 <div class="col-lg-6">
                   <div class="input-group">
                     <form action="/msg" method="post">
@@ -63,25 +51,15 @@
                     <span class="input-group-lg">
                       <button class="btn btn-default" type="submit">Send message</button>
                     </span>
-                  </form>
-                  </div><!-- /input-group -->
-                </div><!-- /.col-lg-6 -->
+                    </form>
+                  </div>
+                </div>
               </div>
       </div>
-      <div class="message">
-        <% # @result = "Message successfully sended" %>
-        <% if @result %>
-          <p><%=@result %></p>
-          <%end %>
-      </div>
 
 
-    </div> <!-- /container -->
+    </div> 
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
