--- a/views/hobby.erb
+++ b/views/hobby.erb
@@ -1,51 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>First singing with Sinatra</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">First singing</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/bio">Biography</a></li>
-            <li class="active"><a href="/hobby">Hobby</a></li>
-            <li><a href="/msg">Message</a></li>
-            
-          </ul>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="container">
-
-     
-      <div class="jumbotron">
-        <h2>My most important hobby - photography. In this business for about a year. And achieved a certain result.</h2>
-        
-        
-      </div>
-
+<h2>My most important hobby - photography. In this business for about a year. And achieved a certain result.</h2>
       <div class="span7">
         <div id="myCarousel" class="carousel slide">
           <div class="carousel-inner">
@@ -56,20 +9,20 @@
               </div>
             </div>
             <div class="item">
-              <img src="img/2.jpg" alt="">
+              <img src="/img/2.jpg" alt="">
               <div class="carousel-caption">
                 
               </div>
             </div>
         
             <div class="item">
-              <img src="img/4.jpg" alt="">
+              <img src="/img/4.jpg" alt="">
               <div class="carousel-caption">
              
               </div>
             </div>
             <div class="item">
-              <img src="img/5.jpg" alt="">
+              <img src="/img/5.jpg" alt="">
               <div class="carousel-caption">
              
               </div>
@@ -79,14 +32,3 @@
           <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
         </div>
       </div>
-
-    </div>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-  $(function(){
-    $('#myCarousel').carousel();
-  })
-  </script>
-  </body>
-</html>
