--- a/views/msg.erb
+++ b/views/msg.erb
@@ -1,52 +1,18 @@
+              <% if @errors.any? %>
+              <% @errors.each do |error| %>
+                <div class="alert alert-error alert-block">
+                  <button type="button" class="close" data-dismiss="alert">x</button>
+                  <h4><%= error%></h4>
+                </div>
+              <% end %>  
+              <% end %>
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>First singing with Sinatra</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">First singing</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li ><a href="/">Home</a></li>
-            <li><a href="/bio">Biography</a></li>
-            <li><a href="/hobby">Hobby</a></li>
-            <li class="active"><a href="/msg">Message</a></li>
-            
-          </ul>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="container">
-
-    
-      <div class="jumbotron">
-                <p>Before sending a message, you need to write your mail settings to a file main.rb</p>
+              <p>Before sending a message, you need to write your mail settings to a file main.rb</p>
               <div class="row">
                 <div class="col-lg-6">
                   <div class="input-group">
                     <form action="/msg" method="post">
-                      <input type="email" name="email" class="form-control" placeholder="Email">
+                      <input type="text" name="email" class="form-control" placeholder="Email">
                     <textarea name="text" class="form-control" placeholder="Your message"></textarea>
                     <span class="input-group-lg">
                       <button class="btn btn-default" type="submit">Send message</button>
@@ -55,12 +21,3 @@
                   </div>
                 </div>
               </div>
-      </div>
-
-
-    </div> 
-
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
