Updated the code

--- a/views/msg.erb
+++ b/views/msg.erb
@@ -12,7 +12,7 @@
                 <div class="col-lg-6">
                   <div class="input-group">
                     <form action="/msg" method="post">
-                      <input type="text" name="email" class="form-control" placeholder="Email">
+                      <input type="email" name="email" class="form-control" placeholder="Email">
                     <textarea name="text" class="form-control" placeholder="Your message"></textarea>
                     <span class="input-group-lg">
                       <button class="btn btn-default" type="submit">Send message</button>
